tests/suite/errors/e44_unicode_escape_out_of_range.rs
// err: is out of range

fn main() {
    let _c = '\u{110000}';
}
